<resources>
    <string name="app_name">Zypher</string>
    <string name="font">Font</string>
    <string name="aa">Aa</string>
    <string name="align">Align</string>
    <string name="margins">Margins</string>
    <string name="line_spacing">Line Spacing</string>
    <string name="mode">Mode</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview2">TextView2</string>
    <string name="_1_of_10">1 of 10</string>
    <string name="_9_pages_left">9 pages left</string>
    <string name="menu">Menu</string>
    <string name="string_content">Welcome to 2 States, a story about Krish and Ananya. They are from
two different states of India, deeply in love and want to get married. Of
course, their parents don’t agree.</string>
    <string name="_10dp">10dp</string>
    <string name="_15dp">15dp</string>
    <string name="_5dp">5dp</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="bookmark">Bookmark</string>
    <string name="no_bookmarks">No Bookmarks</string>
    <string name="no_notes">No notes</string>
    <string name="back_to_page_1">Back to page 1</string>
    <string name="todo">TODO</string>

</resources>
